--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -32,7 +32,6 @@ body {
   white-space: nowrap;
   text-overflow: ellipsis;
   font-weight: bold;
-
   position: sticky;
   left: 0;
   z-index: 10;
@@ -144,13 +143,13 @@ h4{
 .cell span {
   position: absolute;
   top: 50%; /* Align to the top of the cell */
-  left: 50%; /* Start from the left of the cell */
+  /* left: 50%;  */
   transform: translate(-50%, -50%);
-  width: 100%; /* Span the full width of the reservation cells */
+  width:max-content; /* Span the full width of the reservation cells */
   /* height: 100%; */
   white-space: nowrap; /* Prevent text wrapping */
   overflow: hidden; /* Hide overflow */
-  text-overflow: ellipsis; /* Show ellipsis for overflow */
+  text-overflow: visible; /* Show ellipsis for overflow */
   display: block; /* Ensure it behaves like a block element within the cell */
 }
 
@@ -219,26 +218,6 @@ h4{
   font-size: 20px;
   color: #333; /* Dark text for readability */
 }
-
-
-/* ------- INFINITE SCROLL -------- */
-
-/* .cdk-virtual-scroll-data-source-example .example-viewport {
-  height: 200px;
-  width: 200px;
-  border: 1px solid black;
-}
-
-.cdk-virtual-scroll-data-source-example .example-viewport .cdk-virtual-scroll-content-wrapper {
-  display: flex;
-  flex-direction: row;
-}
-
-.cdk-virtual-scroll-data-source-example .cell {
-  width: 50px;
-  height: 100%;
-  writing-mode: vertical-lr;
-} */
 
 /* ============ CSS for Filter ============= */
 
