before departure cell highlight

--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -162,24 +162,20 @@ h4{
   border-bottom:1px solid white;
 }
 
-/* Start of a reservation - rounded on the left side */
 .cell.reservation-start {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 
-/* End of a reservation - rounded on the right side */
 .cell.reservation-end {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
 
-/* Remove the border between adjacent reserved cells */
 .cell.reserved + .cell.reserved {
   border-left: none;
 }
 
-/* Fix possible conflicts with reserved cells styling */
 .cell.reserved.reservation-end {
   border-top-right-radius: 40px !important;
   border-bottom-right-radius: 40px !important;
@@ -190,6 +186,26 @@ h4{
   border-bottom-left-radius: 40px !important;
 }
 
+ /* new reservation css */
+/* .cell.reservation-start-half {
+  background: linear-gradient(to right, transparent 50%, rgb(90, 90, 207) 50%);
+  border-radius: 10px 0 0 10px;
+}
+
+.cell.reservation-end-partial {
+  background: linear-gradient(to left, rgb(90, 90, 207) 40%, transparent 40%);
+  border-radius: 0 10px 10px 0;
+}
+
+
+.cell.reserved {
+  background-color: rgb(90, 90, 207);
+  color: white;
+}
+
+.cell.reserved + .cell.reserved {
+  border-left: none;
+} */
 
 
 .selected {
