--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -164,6 +164,19 @@ h4{
   border-bottom:1px solid white;
 }
 
+.cell.checked-in {
+  background-color: orange; /* Orange for checked-in */
+  color: white;
+  border: none;
+}
+
+/* Color for 'CHECKED-OUT' status */
+.cell.checked-out {
+  background-color: #D2B48C; /* Light brown for checked-out */
+  color: white;
+  border: none;
+}
+
 .cell.reservation-start {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -178,36 +191,16 @@ h4{
   border-left: none;
 }
 
-.cell.reserved.reservation-end {
+.cell.reserved.reservation-end, .cell.checked-in.reservation-end, .cell.checked-out.reservation-end {
   border-top-right-radius: 40px !important;
   border-bottom-right-radius: 40px !important;
 }
 
-.cell.reserved.reservation-start {
+.cell.reserved.reservation-start, .cell.checked-in.reservation-start, .cell.checked-out.reservation-start  {
   border-top-left-radius: 40px !important;
   border-bottom-left-radius: 40px !important;
 }
 
- /* new reservation css */
-/* .cell.reservation-start-half {
-  background: linear-gradient(to right, transparent 50%, rgb(90, 90, 207) 50%);
-  border-radius: 10px 0 0 10px;
-}
-
-.cell.reservation-end-partial {
-  background: linear-gradient(to left, rgb(90, 90, 207) 40%, transparent 40%);
-  border-radius: 0 10px 10px 0;
-}
-
-
-.cell.reserved {
-  background-color: rgb(90, 90, 207);
-  color: white;
-}
-
-.cell.reserved + .cell.reserved {
-  border-left: none;
-} */
 
 
 .selected {
