--- a/src/app/booking-reservation/booking-reservation.component.html
+++ b/src/app/booking-reservation/booking-reservation.component.html
@@ -146,7 +146,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="CalendarModalLabel">Choose your arrival and departure day</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" (click)="closeCalendarModal()" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <!-- Selected Date Fields (aligned with calendar) -->
